Do not use the AppMenu with Unity and OSX

Fixes bug https://bugzilla.gnome.org/show_bug.cgi?id=696425